--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/resume.min.css" rel="stylesheet">
+  <link href="css/resume.css" rel="stylesheet">
 
 </head>
 
@@ -63,7 +63,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Samuel
+        <h1 class="mb-0">Sam
           <span class="text-primary">Shatzkin</span>
         </h1>
         <div class="subheading mb-5"> (443) 745-7078
