--- a/index.html
+++ b/index.html
@@ -260,8 +260,14 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p>I’m vice president of UChicago’s Engineering Society, a student organization that serves as the engineering hub for UChicago’s undergrad student body. We host educational workshops, guest speakers, hackathons and weekly project nights where members work on a variety of long and short - term projects. Some of our past projects have included robotic arms, quadcopters, acoustic levitators and solar-powered hats.</p>
+        <div class="subheading mb-3">Books I'm Reading</div>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-book"></i>
+            Algorithms to Live By by Brian Christian and Tom Griffiths. 10/10 Recommend.</li>
+          <li>
+        </ul>
       </div>
     </section>
 
@@ -273,30 +279,10 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+            Award for Outstanding Abstract Art, Arts Connection - May 2015</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            Award for Display of Outstanding Entrepeneurship, Big Idea - Summer 2014</li>
         </ul>
       </div>
     </section>
