--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/font-mfizz-2.4.1/font-mfizz.css">
 
   <!-- Custom styles for this template -->
   <link href="css/resume.css" rel="stylesheet">
@@ -209,7 +210,7 @@
             <i class="fab fa-js-square"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
+            <i class="fab icon-apache"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-react"></i>
