--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
+        <div class="subheading mb-3">Programming Languages</div>
+        <ul class="list-inline dev-icons mb-0">
           <li class="list-inline-item">
             <i class="fab fa-html5"></i>
           </li>
@@ -210,48 +210,55 @@
             <i class="fab fa-js-square"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab icon-apache"></i>
+            <i class="fab icon-c"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-react"></i>
+            <i class="fab icon-java"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
+            <i class="fab fa-python"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
+            <i class="fab fa-r-project"></i>
+          </li>
+        </ul>
+
+        <div class="subheading mb-3">Tools</div>
+        <ul class="list-inline dev-icons mb-0">
+          <li class="list-inline-item">
+            <i class="fab icon-unity"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-less"></i>
+            <i class="fab icon-git"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-wordpress"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
+            <i class="fab fa-adobe"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
+            <i class="fab fa-chrome"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
+            <i class="fab icon-google-developers"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fas fa-file-excel"></i>
           </li>
         </ul>
 
-        <div class="subheading mb-3">Workflow</div>
+        <div class="subheading mb-3">Additional Languages, Tools and Skills</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            Typed Racket</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
+            Photography &amp; Videography</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
+            Juggling</li>
         </ul>
       </div>
     </section>
