Added experiences and relevant courses.

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Website Designer and Developer</h3>
-            <div class="subheading mb-3">Yuval Shaked Lab at the Technion-Israel Institute of Technology</div>
+            <h3 class="mb-0">Yuval Shaked Lab at the Technion-Israel Institute of Technology - Haifa, IL</h3>
+            <div class="subheading mb-3">Website Designer and Developer</div>
               <ul class = "fa-ul mb-0" style="list-style-type:disc;">
                 <li>
                   Designed and constructed a website for the Cell Biology and Cancer Science Department's Research Lab.
@@ -108,40 +108,94 @@
               </ul>
             </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">June 2018 - August 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-          </div>
+            <h3 class="mb-0">Regulus - Haifa, Israel</h3>
+            <div class="subheading mb-3">Intern</div>
+            <ul class = "fa-ul mb-0" style="list-style-type:disc;">
+              <li>
+                Conducted research on GPS and automated vehicle industries for one of Israel’s top sensor cyber security startups
+              </li>
+              <li>
+                Prepared and presented findings to the CEO and company-wide
+              </li>
+            </ul>
+            </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">June 2018 - August 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Fokoya - Tel Aviv, IL</h3>
+            <div class="subheading mb-3">Intern, Project Manager</div>
+            <ul class = "fa-ul mb-0" style="list-style-type:disc;">
+              <li>
+                 Developed and marketed the Cryptocurrency Community Database
+               </li>
+              <li>
+                Automated manual office processes, increasing efficiency by up to 600%
+              </li>
+              <li>
+                Produced and hosted a  livestream for product marketing and community engagement on 4 social media platforms  twice per week
+              </li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">February 2018 - June 2018</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Johns Hopkins University, Department of Neuroscience - Baltimore, MD</h3>
+            <div class="subheading mb-3">Research Assistant</div>
+            <ul class = "fa-ul mb-0" style="list-style-type:disc;">
+              <li>
+                Assisted researchers with statistical analysis of RNA sequencing data utilizing the programming language R
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">December 2015 - December 2016</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">B’nai B’rith Youth Organization - New York, NY</h3>
+            <div class="subheading mb-3">Regional President, Regional Head of Communications</div>
+            <ul class = "fa-ul mb-0" style="list-style-type:disc;">
+              <li>
+                Oversaw and created educational programs, social events, charity initiatives, social media presence, digital outreach and training programs
+              </li>
+              <li>
+                Implemented recruitment and fundraising procedures and goals
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2015 - June 2017</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <h3 class="mb-0">Young People’s Summer Stock Performing & Creative Arts Camp, Baltimore, MD</h3>
+            <div class="subheading mb-3">Camp Photographer, Photography and Videography Teacher, Camp Counselor</div>
+            <ul class = "fa-ul mb-0" style="list-style-type:disc;">
+              <li>
+                Responsible for all camp photography. Created a curriculum for and taught a beginner level photography class for 25 campers of various ages
+              </li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">Summer 2014,'15,'16,'17</span>
           </div>
         </div>
 
@@ -158,20 +212,39 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">University of Chicago - Chicago, IL</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
+            <div class="subheading">Bachelor of Science</div>
             <div>Computer Science</div>
             <p>GPA: 3.94</p>
+            <div class="subheading mb-3">Representative Courses</div>
+            <ul class="fa-ul mb-0">
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                CMSC 21800 - Data Science for Compuer Scientists
+              </li>
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                CMSC 22000 - Software Development
+              </li>
+              <li>
+                <i class="fa-li fa fa-dna"></i>
+                BIOS 20151 - Quantitative Modeling in Biology
+              </li>
+              <li>
+                <i class="fa-li fa fa-bone"></i>
+                BIOS 29142 - From Fossils to Fermi's Paradox: Origin and Evolution of Intelligent Life
+              </li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Currently Enrolled, Class of 2022</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Big Idea Gap Year - Be'er Sheva, Israel</h3>
-            <div> Certificate for Training Course for Web and Mobile Programmers. Also participated in a one month internship at the Center for Development and innovation in Be’er Sheva’s high technology park.</div>
-            <p></p>
+            <div> Certificate for Training Course for Web and Mobile Programmers. Also participated in a one month internship at the Center for Development and innovation in Be’er Sheva’s high technology park.
+            </div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Sept 2017 - Feb 2018</span>
@@ -273,8 +346,8 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-book"></i>
-            Algorithms to Live By by Brian Christian and Tom Griffiths. 10/10 Recommend.</li>
-          <li>
+            Algorithms to Live By by Brian Christian and Tom Griffiths. 10/10 Recommend.
+          </li>
         </ul>
       </div>
     </section>
