Altered Home Page

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h1 class="mb-0">Sam
           <span class="text-primary">Shatzkin</span>
         </h1>
-        <div class="subheading mb-5"> (443) 745-7078
+        <div class="subheading mb-5">
           <a href="mailto:sshatzkin@uchicago.edu">sshatzkin@uchicago.edu</a>
         </div>
         <p class="lead mb-5">I am a computer science student at the University of Chicago with a minor in biology. I’m interested in exploring the intersection between technology and biology in new and interesting ways.</p>
