--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/resume.css" rel="stylesheet">
+  <link href="css/image_grid.css" rel="stylesheet">
 
 </head>
 
@@ -40,6 +41,9 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
@@ -75,16 +79,110 @@
           <a href="https://www.linkedin.com/in/samshatzkin/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-        <a href="https://github.com/Sshatzkin">
+          <a href="https://github.com/Sshatzkin">
             <i class="fab fa-github"></i>
           </a>
-            <!--<a href="#">
+          <!--<a href="#">
             <i class="fab fa-twitter"></i>
           </a>
           <a href="#">
             <i class="fab fa-facebook-f"></i>
           </a>-->
         </div>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="portfolio">
+      <div class="w-100">
+        <h2 class="mb-5">Portfolio</h2>
+        <ul id="rig">
+          <li>
+            <a class="rig-cell" href="html/portfolio.html#bagel">
+            <img class="rig-img" src="img/grid/Square Bagel.png">
+            <span class="rig-overlay"></span>
+            <span class="rig-text">Bagel</span>
+        </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="html/portfolio.html#chiventure">
+            <img class="rig-img" src="img/Chiventure/Banner.png">
+            <span class="rig-overlay"></span>
+            <span class="rig-text">Chiventure</span>
+        </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="#">
+            <img class="rig-img" src="img/Prof Pic.jpg">
+            <span class="rig-overlay"></span>
+            <span class="rig-text">Vivamus ut Felis</span>
+        </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="#">
+            <img class="rig-img" src="img/profile.jpg">
+            <span class="rig-overlay"></span>
+            <span class="rig-text">Curabitur tempus</span>
+        </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="#">
+            <img class="rig-img" src="img/profile.jpg">
+            <span class="rig-overlay"></span>
+            <span class="rig-text">Sed et nunc luctus</span>
+        </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="#">
+            <img class="rig-img" src="img/Prof Pic.jpg">
+            <span class="rig-overlay"></span>
+            <span class="rig-text">Suspendisse tellus</span>
+        </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="#">
+            <img class="rig-img" src="img/7.jpg">
+            <span class="rig-overlay"></span>
+            <span class="rig-text">pellentesque odio</span>
+        </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="#">
+            <img class="rig-img" src="img/8.jpg">
+            <span class="rig-overlay"></span>
+            <span class="rig-text">Nam euismod</span>
+        </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="#">
+            <img class="rig-img" src="img/9.jpg">
+            <span class="rig-overlay"></span>
+            <span class="rig-text">Vestibulum ultricies</span>
+        </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="#">
+            <img class="rig-img" src="img/10.jpg">
+            <span class="rig-overlay"></span>
+            <span class="rig-text">quis interdum sapien</span>
+        </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="#">
+            <img class="rig-img" src="img/11.jpg">
+            <span class="rig-overlay"></span>
+            <span class="rig-text">Maecenas vitae</span>
+        </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="#">
+            <img class="rig-img" src="img/12.jpg">
+            <span class="rig-overlay"></span>
+            <span class="rig-text">Proin Scelerisque</span>
+        </a>
+          </li>
+        </ul>
       </div>
     </section>
 
@@ -98,15 +196,15 @@
           <div class="resume-content">
             <h3 class="mb-0">Yuval Shaked Lab at the Technion-Israel Institute of Technology - Haifa, IL</h3>
             <div class="subheading mb-3">Website Designer and Developer</div>
-              <ul class = "fa-ul mb-0" style="list-style-type:disc;">
-                <li>
-                  Designed and constructed a website for the Cell Biology and Cancer Science Department's Research Lab.
-                </li>
-                <li>
-                  Manage the website and perform occaisional updates.
-                </li>
-              </ul>
-            </div>
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
+              <li>
+                Designed and constructed a website for the Cell Biology and Cancer Science Department's Research Lab.
+              </li>
+              <li>
+                Manage the website and perform occaisional updates.
+              </li>
+            </ul>
+          </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">June 2018 - August 2018</span>
           </div>
@@ -116,7 +214,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Regulus - Haifa, Israel</h3>
             <div class="subheading mb-3">Intern</div>
-            <ul class = "fa-ul mb-0" style="list-style-type:disc;">
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
               <li>
                 Conducted research on GPS and automated vehicle industries for one of Israel’s top sensor cyber security startups
               </li>
@@ -124,7 +222,7 @@
                 Prepared and presented findings to the CEO and company-wide
               </li>
             </ul>
-            </div>
+          </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">June 2018 - August 2018</span>
           </div>
@@ -134,15 +232,15 @@
           <div class="resume-content">
             <h3 class="mb-0">Fokoya - Tel Aviv, IL</h3>
             <div class="subheading mb-3">Intern, Project Manager</div>
-            <ul class = "fa-ul mb-0" style="list-style-type:disc;">
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
               <li>
-                 Developed and marketed the Cryptocurrency Community Database
-               </li>
+                Developed and marketed the Cryptocurrency Community Database
+              </li>
               <li>
                 Automated manual office processes, increasing efficiency by up to 600%
               </li>
               <li>
-                Produced and hosted a  livestream for product marketing and community engagement on 4 social media platforms  twice per week
+                Produced and hosted a livestream for product marketing and community engagement on 4 social media platforms twice per week
               </li>
             </ul>
           </div>
@@ -155,7 +253,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Johns Hopkins University, Department of Neuroscience - Baltimore, MD</h3>
             <div class="subheading mb-3">Research Assistant</div>
-            <ul class = "fa-ul mb-0" style="list-style-type:disc;">
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
               <li>
                 Assisted researchers with statistical analysis of RNA sequencing data utilizing the programming language R
               </li>
@@ -170,7 +268,7 @@
           <div class="resume-content">
             <h3 class="mb-0">B’nai B’rith Youth Organization - New York, NY</h3>
             <div class="subheading mb-3">Regional President, Regional Head of Communications</div>
-            <ul class = "fa-ul mb-0" style="list-style-type:disc;">
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
               <li>
                 Oversaw and created educational programs, social events, charity initiatives, social media presence, digital outreach and training programs
               </li>
@@ -188,7 +286,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Young People’s Summer Stock Performing & Creative Arts Camp, Baltimore, MD</h3>
             <div class="subheading mb-3">Camp Photographer, Photography and Videography Teacher, Camp Counselor</div>
-            <ul class = "fa-ul mb-0" style="list-style-type:disc;">
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
               <li>
                 Responsible for all camp photography. Created a curriculum for and taught a beginner level photography class for 25 campers of various ages
               </li>
@@ -218,20 +316,16 @@
             <div class="subheading mb-3">Representative Courses</div>
             <ul class="fa-ul mb-0">
               <li>
-                <i class="fa-li fa fa-laptop-code"></i>
-                CMSC 21800 - Data Science for Compuer Scientists
+                <i class="fa-li fa fa-laptop-code"></i> CMSC 21800 - Data Science for Compuer Scientists
               </li>
               <li>
-                <i class="fa-li fa fa-laptop-code"></i>
-                CMSC 22000 - Software Development
+                <i class="fa-li fa fa-laptop-code"></i> CMSC 22000 - Software Development
               </li>
               <li>
-                <i class="fa-li fa fa-dna"></i>
-                BIOS 20151 - Quantitative Modeling in Biology
+                <i class="fa-li fa fa-dna"></i> BIOS 20151 - Quantitative Modeling in Biology
               </li>
               <li>
-                <i class="fa-li fa fa-bone"></i>
-                BIOS 29142 - From Fossils to Fermi's Paradox: Origin and Evolution of Intelligent Life
+                <i class="fa-li fa fa-bone"></i> BIOS 29142 - From Fossils to Fermi's Paradox: Origin and Evolution of Intelligent Life
               </li>
             </ul>
           </div>
@@ -324,14 +418,12 @@
         <div class="subheading mb-3">Additional Languages, Tools and Skills</div>
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Typed Racket</li>
+            <i class="fa-li fa fa-check"></i> Typed Racket</li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Photography &amp; Videography</li>
+            <i class="fa-li fa fa-check"></i> Photography &amp; Videography</li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Juggling</li>
+            <i class="fa-li fa fa-check"></i> Juggling
+          </li>
         </ul>
       </div>
     </section>
@@ -341,12 +433,12 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>I’m vice president of UChicago’s Engineering Society, a student organization that serves as the engineering hub for UChicago’s undergrad student body. We host educational workshops, guest speakers, hackathons and weekly project nights where members work on a variety of long and short - term projects. Some of our past projects have included robotic arms, quadcopters, acoustic levitators and solar-powered hats.</p>
+        <p>I’m vice president of UChicago’s Engineering Society, a student organization that serves as the engineering hub for UChicago’s undergrad student body. We host educational workshops, guest speakers, hackathons and weekly project nights where members
+          work on a variety of long and short - term projects. Some of our past projects have included robotic arms, quadcopters, acoustic levitators and solar-powered hats.</p>
         <div class="subheading mb-3">Books I'm Reading</div>
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-book"></i>
-            Algorithms to Live By by Brian Christian and Tom Griffiths. 10/10 Recommend.
+            <i class="fa-li fa fa-book"></i> Algorithms to Live By by Brian Christian and Tom Griffiths. 10/10 Recommend.
           </li>
         </ul>
       </div>
@@ -359,11 +451,9 @@
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Award for Outstanding Abstract Art, Arts Connection - May 2015</li>
+            <i class="fa-li fa fa-trophy text-warning"></i> Award for Outstanding Abstract Art, Arts Connection - May 2015</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Award for Display of Outstanding Entrepeneurship, Big Idea - Summer 2014</li>
+            <i class="fa-li fa fa-trophy text-warning"></i> Award for Display of Outstanding Entrepeneurship, Big Idea - Summer 2014</li>
         </ul>
       </div>
     </section>
