Added some more images and removed everything from vendor

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <ul id="rig">
           <li>
             <a class="rig-cell" href="html/portfolio.html#bagel">
-            <img class="rig-img" src="img/grid/Square Bagel.png">
+            <img class="rig-img" src="img/Bagel/Bagel 4-3.png">
             <span class="rig-overlay"></span>
             <span class="rig-text">Bagel</span>
         </a>
@@ -121,7 +121,7 @@
           </li>
           <li>
             <a class="rig-cell" href="#">
-            <img class="rig-img" src="img/profile.jpg">
+            <img class="rig-img" src="img/Chiventure/Banner.png">
             <span class="rig-overlay"></span>
             <span class="rig-text">Curabitur tempus</span>
         </a>
