--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -48,7 +48,7 @@
           <a class="nav-link js-scroll-trigger" href="#chiventure">Chiventure</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Cryptocurrency Community Database</a>
+          <a class="nav-link js-scroll-trigger" href="#CCD">Cryptocurrency Community Database</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Google Home LED Encoding</a>
@@ -86,6 +86,18 @@
         <ul class="fa-ul mb-0">
           <li>
             Chiventure Project</li>
+        </ul>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="CCD">
+      <div class="w-100">
+        <h2 class="mb-5">Cryptocurrency Community Database</h2>
+        <ul class="fa-ul mb-0">
+          <li>
+            CCD Project</li>
         </ul>
       </div>
     </section>
