Added files back to vendor and made changes to some CSS

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -21,6 +21,7 @@
 
   <!-- Custom styles for this template -->
   <link href="../css/resume.css" rel="stylesheet">
+  <link href="../css/portfolio.css" rel="stylesheet">
 
 </head>
 
@@ -71,6 +72,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="bagel">
       <div class="w-100">
         <h2 class="mb-5">Bagel</h2>
+        <img class="banner-img" src="\img\Bagel\bagel_menu.png">
         <ul class="fa-ul mb-0">
           <li>
             Bagel Project</li>
