Added images and content to portfolio and image grid.

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -72,11 +72,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="bagel">
       <div class="w-100">
         <h2 class="mb-5">Bagel</h2>
-        <img class="banner-img" src="\img\Bagel\bagel_menu.png">
-        <ul class="fa-ul mb-0">
-          <li>
-            Bagel Project</li>
-        </ul>
+          <p>Bagel is a word-scramble game that I’m currently working on. More information soon.</p>
+            <img class="banner-img" src="\img\Bagel\bagel_banner.png">
       </div>
     </section>
 
@@ -85,10 +82,23 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="chiventure">
       <div class="w-100">
         <h2 class="mb-5">Chiventure</h2>
-        <ul class="fa-ul mb-0">
-          <li>
-            Chiventure Project</li>
-        </ul>
+        <!--<ul class="fa-ul mb-0">
+          <li>-->
+        <p>Chiventure is a game engine built to run text-based games specified in an original file format designed for this project. This project was the creation of UChicago’s software development class - a course where 30 students spend 10 weeks working
+          together to develop on major project.It is intended to be a simulation of what it is like to work on a real software development team.
+        </p>
+        <p>
+          This game, like many classic text-based games allow the player to navigate and interact with the world of this game via text commands.
+        </p>
+        <img class="banner-img" src="\img\Chiventure\logo.png">
+        <p>I was on the UI team for this project. We developed the entire UI using the NCurses library which allowed us to have this game run entirely in a linux terminal. I developed a map interface that generates a map from the game file and updates to
+          show the player where they are in game world. Visual elements like this are not typical of the classic text-based games we were emulating with this project but we felt that this addition added a lot of value to the text-based format.
+        </p>
+        <img class="banner-img" src="\img\Chiventure\map-view.jpg">
+
+        <p>This is an image of a near-final iteration of the map. The main component of the map is the grid of boxes representing “rooms” or areas of the game. You can see a small ascii character-based person in the center indicating the player’s location
+          and in the upper left hand corner, the x, y, and z coordinates of the player’s current location. Some version of the map also include illustrations of connections between rooms.
+        </p>
       </div>
     </section>
 
