--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
         </a>
           </li>
           <li>
-            <a class="rig-cell" href="#">
-            <img class="rig-img" src="img/Prof Pic.jpg">
+            <a class="rig-cell" href="html/portfolio.html#CCD">
+            <img class="rig-img" src="img/CCD/CCD 4-3.png">
             <span class="rig-overlay"></span>
-            <span class="rig-text">Vivamus ut Felis</span>
+            <span class="rig-text">The CCD</span>
         </a>
           </li>
           <li>
