Updated Hackathon project and made CSS updates.

--- a/index.html
+++ b/index.html
@@ -100,87 +100,59 @@
         <ul id="rig">
           <li>
             <a class="rig-cell" href="html/portfolio.html#bagel">
-            <img class="rig-img" src="img/Bagel/Bagel 4-3.png">
-            <span class="rig-overlay"></span>
-            <span class="rig-text">Bagel</span>
-        </a>
+              <img class="rig-img" src="img/Bagel/Bagel 4-3.png">
+              <span class="rig-overlay"></span>
+              <span class="rig-text">Bagel</span>
+            </a>
           </li>
           <li>
             <a class="rig-cell" href="html/portfolio.html#chiventure">
-            <img class="rig-img" src="img/Chiventure/Banner.png">
-            <span class="rig-overlay"></span>
-            <span class="rig-text">Chiventure</span>
-        </a>
+              <img class="rig-img" src="img/Chiventure/Banner.png">
+              <span class="rig-overlay"></span>
+              <span class="rig-text">Chiventure</span>
+            </a>
           </li>
           <li>
             <a class="rig-cell" href="html/portfolio.html#CCD">
-            <img class="rig-img" src="img/CCD/CCD 4-3.png">
-            <span class="rig-overlay"></span>
-            <span class="rig-text">The CCD</span>
-        </a>
+              <img class="rig-img" src="img/CCD/CCD 4-3.png">
+              <span class="rig-overlay"></span>
+              <span class="rig-text">The CCD</span>
+            </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="html/portfolio.html#Hackathon19">
+              <img class="rig-img" src="img/Hackathon/Board.jpg">
+              <span class="rig-overlay"></span>
+              <span class="rig-text">Hackathon 2019</span>
+            </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="html/portfolio.html#bagel">
+              <img class="rig-img" src="img/Bagel/Bagel 4-3.png">
+              <span class="rig-overlay"></span>
+              <span class="rig-text">Bagel</span>
+            </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="html/portfolio.html#chiventure">
+              <img class="rig-img" src="img/Chiventure/Banner.png">
+              <span class="rig-overlay"></span>
+              <span class="rig-text">Chiventure</span>
+            </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="html/portfolio.html#CCD">
+              <img class="rig-img" src="img/CCD/CCD 4-3.png">
+              <span class="rig-overlay"></span>
+              <span class="rig-text">The CCD</span>
+            </a>
           </li>
           <li>
             <a class="rig-cell" href="#">
-            <img class="rig-img" src="img/Chiventure/Banner.png">
-            <span class="rig-overlay"></span>
-            <span class="rig-text">Curabitur tempus</span>
-        </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="#">
-            <img class="rig-img" src="img/profile.jpg">
-            <span class="rig-overlay"></span>
-            <span class="rig-text">Sed et nunc luctus</span>
-        </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="#">
-            <img class="rig-img" src="img/Prof Pic.jpg">
-            <span class="rig-overlay"></span>
-            <span class="rig-text">Suspendisse tellus</span>
-        </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="#">
-            <img class="rig-img" src="img/7.jpg">
-            <span class="rig-overlay"></span>
-            <span class="rig-text">pellentesque odio</span>
-        </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="#">
-            <img class="rig-img" src="img/8.jpg">
-            <span class="rig-overlay"></span>
-            <span class="rig-text">Nam euismod</span>
-        </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="#">
-            <img class="rig-img" src="img/9.jpg">
-            <span class="rig-overlay"></span>
-            <span class="rig-text">Vestibulum ultricies</span>
-        </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="#">
-            <img class="rig-img" src="img/10.jpg">
-            <span class="rig-overlay"></span>
-            <span class="rig-text">quis interdum sapien</span>
-        </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="#">
-            <img class="rig-img" src="img/11.jpg">
-            <span class="rig-overlay"></span>
-            <span class="rig-text">Maecenas vitae</span>
-        </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="#">
-            <img class="rig-img" src="img/12.jpg">
-            <span class="rig-overlay"></span>
-            <span class="rig-text">Proin Scelerisque</span>
-        </a>
+              <img class="rig-img" src="img/Chiventure/Banner.png">
+              <span class="rig-overlay"></span>
+              <span class="rig-text">Curabitur tempus</span>
+            </a>
           </li>
         </ul>
       </div>
