Added new portfolio item and made CSS updates.

--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
             </a>
           </li>
           <li>
-            <a class="rig-cell" href="html/portfolio.html#bagel">
-              <img class="rig-img" src="img/Bagel/Bagel 4-3.png">
+            <a class="rig-cell" href="html/portfolio.html#shakedlab">
+              <img class="rig-img" src="img/Shaked/Home 4-3.jpg">
               <span class="rig-overlay"></span>
-              <span class="rig-text">Bagel</span>
+              <span class="rig-text">Shaked Lab Website</span>
             </a>
           </li>
           <li>
