--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -55,7 +55,7 @@
           <a class="nav-link js-scroll-trigger" href="#Hackathon19">Google Home LED Encoding</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Name Generator</a>
+          <a class="nav-link js-scroll-trigger" href="#shakedlab">Name Generator</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
@@ -90,12 +90,17 @@
         <p>
           This game, like many classic text-based games allow the player to navigate and interact with the world of this game via text commands.
         </p>
-        <img class="banner-img" src="\img\Chiventure\logo.png">
+        <div class="row">
+          <div class="column">
+          <img class="col-img" src="\img\Chiventure\logo.png">
+          </div>
+          <div class="column">
+            <img class="col-img" src="\img\Chiventure\map-view.jpg">
+          </div>
+        </div>
         <p>I was on the UI team for this project. We developed the entire UI using the NCurses library which allowed us to have this game run entirely in a linux terminal. I developed a map interface that generates a map from the game file and updates to
           show the player where they are in game world. Visual elements like this are not typical of the classic text-based games we were emulating with this project but we felt that this addition added a lot of value to the text-based format.
         </p>
-        <img class="banner-img" src="\img\Chiventure\map-view.jpg">
-
         <p>This is an image of a near-final iteration of the map. The main component of the map is the grid of boxes representing “rooms” or areas of the game. You can see a small ascii character-based person in the center indicating the player’s location
           and in the upper left hand corner, the x, y, and z coordinates of the player’s current location. Some version of the map also include illustrations of connections between rooms.
         </p>
@@ -107,7 +112,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="CCD">
       <div class="w-100">
         <h2 class="mb-5">Cryptocurrency Community Database</h2>
-        <div style="display:block;background:black;">
+        <div class="clearfix">
           <img src="\img\CCD\Profile.PNG" class="profile-img">
           <p>
             While I was working at cryptocurrency-game startup Blockium, it became clear to me that the Cryptocurrency World could benefit from a new community-driven information-sharing platform. The Cryptocurrency Community Database (CCD) is an experimental content
@@ -118,7 +123,7 @@
           </span>
           <a href="https://docs.google.com/spreadsheets/u/1/d/e/2PACX-1vRejp679FcXbImcjh81mpRvhiOYNsDDQbvnoJ0paD9RjCTgM9cBegzdQF1S2pAdzIQPx2-RF7ScvlgR/pubhtml#"> Check out the CCD Here! </a>
         </div>
-        <div style="margin-top:40px;display:block;background:yellow;">
+        <div style="margin-top:10px;">
           <div class="subheading mb-3">Press Coverage</div>
           <ul class="fa-ul mb-0">
             <li>
@@ -149,24 +154,83 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="Hackathon19">
       <div class="w-100">
         <h2 class="mb-5">Google Home LED Encoding</h2>
-        <p>Bagel is a word-scramble game that I’m currently working on. More information soon.</p>
+        <p>A partner and I built this project at Uncommon Hacks 2019, UChicago’s annual Hackathon. The hackathon encourages projects that are “uncommon” over projects that may be more practical.
+        </p>
+        <p>Our project converts audio messages that a user gives a google home to a series of LED light blinks on our LED-to-Alphabet translation board, inspired by a scene from the Netflix Show, Stranger Things.
+        </p>
+        <p>I first developed a google home application in which the google assistant prompts the user to say a message. The google assistant app then uploads this message to a google firebase server. The lights on the board are operated by an arduino UNO
+          running character-to-LED blink translation functions. I used a python script to pull updated messages off of the firebase server and send them to the UNO via serial port messages.
+        </p>
         <div class="video-box">
           <iframe class="video" src="https://www.youtube.com/embed/ZsYna0b4P1k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
+        <p>If I had more time to work on the project, the plan was to use computer vision software and a laptop camera to translate encoded LED blinks back into text. This would then become a form of (impractical) visual light file transfer.
+        </p>
       </div>
     </section>
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="">
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="shakedlab">
       <div class="w-100">
-        <h2 class="mb-5">Name Generator</h2>
-        <p>Bagel is a word-scramble game that I’m currently working on. More information soon.</p>
-        <img class="banner-img" src="\img\Bagel\bagel_banner.png">
-      </div>
-    </section>
+        <h2 class="mb-5">Shaked Lab Website</h2>
+        <p>I completely redesigned and built this website for The Shaked Lab at the Technion Institute in Haifa. Their previous website was outdated and lacked modern accessibility features and mobile device compatibility. I redesigned their site to bring
+          it up to par with modern design features, increasing accessibility, visual appeal and functionality.
+        </p>
+        <!-- Container for the image gallery -->
+        <div class="container">
 
-    <hr class="m-0">
+          <!-- Full-width images with number text -->
+          <div class="mySlides">
+            <div class="numbertext">1 / 4</div>
+            <img src="\img\Shaked\Home.PNG" style="width:100%">
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">2 / 4</div>
+            <img src="\img\Shaked\Lab Members.PNG" style="width:100%">
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">3 / 4</div>
+            <img src="\img\Shaked\Research.PNG" style="width:100%">
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">4 / 4</div>
+            <img src="\img\Shaked\Contact.PNG" style="width:100%">
+          </div>
+
+          <!-- Next and previous buttons -->
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+          <!-- Image text -->
+          <div class="caption-container">
+            <p id="caption"></p>
+          </div>
+
+          <!-- Thumbnail images -->
+          <div class="row-gal">
+            <div class="column-gal">
+              <img class="demo cursor" src="\img\Shaked\Home.PNG" style="width:100%" onclick="currentSlide(1)" alt="Home Page">
+            </div>
+            <div class="column-gal">
+              <img class="demo cursor" src="\img\Shaked\Lab Members.PNG" style="width:100%" onclick="currentSlide(2)" alt="Lab Members">
+            </div>
+            <div class="column-gal">
+              <img class="demo cursor" src="\img\Shaked\Research.PNG" style="width:100%" onclick="currentSlide(3)" alt="Research">
+            </div>
+            <div class="column-gal">
+              <img class="demo cursor" src="\img\Shaked\Contact.PNG" style="width:100%" onclick="currentSlide(4)" alt="Contact Us">
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+  </section>
+
+  <hr class="m-0">
 
   </div>
 
@@ -179,6 +243,7 @@
 
   <!-- Custom scripts for this template -->
   <script src="../js/resume.min.js"></script>
+  <script src="../js/portfolio.js"></script>
 
 </body>
 
