Resolved image filepath error that was preventing images from loading.

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -5,10 +5,10 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Sam Shatzkin's Resume">
+  <meta name="author" content="Sam Shatzkin">
 
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>Sam Shatzkin's Portfolio</title>
 
   <!-- Bootstrap core CSS -->
   <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -70,7 +70,7 @@
       <div class="w-100">
         <h2 class="mb-5">Cryptocurrency Community Database</h2>
         <div class="clearfix">
-          <img src="\img\CCD\Profile.PNG" class="profile-img">
+          <img src="..\img\CCD\Profile.PNG" class="profile-img">
           <p>
             While I was working at cryptocurrency-game startup Blockium, it became clear to me that the Cryptocurrency World could benefit from a new community-driven information-sharing platform. The Cryptocurrency Community Database (CCD) is an experimental content
             management platform I created entirely in google sheets. It serves as forum-like platform where users can post and share information. I personally fed it with a massive amount of information in order for it to be of value to the cryptocurrency
@@ -123,10 +123,10 @@
         </p>
         <div class="row">
           <div class="column">
-            <img class="col-img" src="\img\Chiventure\logo.png">
+            <img class="col-img" src="..\img\Chiventure\logo.png">
           </div>
           <div class="column">
-            <img class="col-img" src="\img\Chiventure\map-view.jpg">
+            <img class="col-img" src="..\img\Chiventure\map-view.jpg">
           </div>
         </div>
         <p>I was on the UI team for this project. We developed the entire UI using the NCurses library which allowed us to have this game run entirely in a linux terminal. I developed a map interface that generates a map from the game file and updates to
@@ -152,22 +152,22 @@
           <!-- Full-width images with number text -->
           <div class="mySlides">
             <div class="numbertext">1 / 4</div>
-            <img src="\img\Shaked\Home.PNG" style="width:100%">
+            <img src="..\img\Shaked\Home.PNG" style="width:100%">
           </div>
 
           <div class="mySlides">
             <div class="numbertext">2 / 4</div>
-            <img src="\img\Shaked\Lab Members.PNG" style="width:100%">
+            <img src="..\img\Shaked\Lab Members.PNG" style="width:100%">
           </div>
 
           <div class="mySlides">
             <div class="numbertext">3 / 4</div>
-            <img src="\img\Shaked\Research.PNG" style="width:100%">
+            <img src="..\img\Shaked\Research.PNG" style="width:100%">
           </div>
 
           <div class="mySlides">
             <div class="numbertext">4 / 4</div>
-            <img src="\img\Shaked\Contact.PNG" style="width:100%">
+            <img src="..\img\Shaked\Contact.PNG" style="width:100%">
           </div>
 
           <!-- Next and previous buttons -->
@@ -182,16 +182,16 @@
           <!-- Thumbnail images -->
           <div class="row-gal">
             <div class="column-gal">
-              <img class="demo cursor" src="\img\Shaked\Home.PNG" style="width:100%" onclick="currentSlide(1)" alt="Home Page">
+              <img class="demo cursor" src="..\img\Shaked\Home.PNG" style="width:100%" onclick="currentSlide(1)" alt="Home Page">
             </div>
             <div class="column-gal">
-              <img class="demo cursor" src="\img\Shaked\Lab Members.PNG" style="width:100%" onclick="currentSlide(2)" alt="Lab Members">
+              <img class="demo cursor" src="..\img\Shaked\Lab Members.PNG" style="width:100%" onclick="currentSlide(2)" alt="Lab Members">
             </div>
             <div class="column-gal">
-              <img class="demo cursor" src="\img\Shaked\Research.PNG" style="width:100%" onclick="currentSlide(3)" alt="Research">
+              <img class="demo cursor" src="..\img\Shaked\Research.PNG" style="width:100%" onclick="currentSlide(3)" alt="Research">
             </div>
             <div class="column-gal">
-              <img class="demo cursor" src="\img\Shaked\Contact.PNG" style="width:100%" onclick="currentSlide(4)" alt="Contact Us">
+              <img class="demo cursor" src="..\img\Shaked\Contact.PNG" style="width:100%" onclick="currentSlide(4)" alt="Contact Us">
             </div>
           </div>
         </div>
@@ -222,7 +222,7 @@
   <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="go">
     <div class="w-100">
       <h2 class="mb-5">Go</h2>
-      <img class="profile-img" src="\img\Go\optimized gif.gif"></img>
+      <img class="profile-img" src="..\img\Go\optimized gif.gif"></img>
       <p>Go is an ancient Chinese two-player game. I recreated the game go with the programming language Typed Racket for a course I was enrolled in.
       </p>
       <p>The game is fully playable by two players. Notice the UI details - a holographic circle under the cursor indicating a potential placement, a star indicating the last placed piece, a square indicating where a piece was captured last turn, and a series
@@ -241,7 +241,7 @@
     <div class="w-100">
       <h2 class="mb-5">Bagel</h2>
       <p>Bagel is a word-scramble game that I’m currently working on. More information soon.</p>
-      <img class="banner-img" src="\img\Bagel\bagel_banner.png">
+      <img class="banner-img" src="..\img\Bagel\bagel_banner.png">
     </div>
   </section>
 
