Resolved capitalization error in filepath

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -123,7 +123,7 @@
         </p>
         <div class="row">
           <div class="column">
-            <img class="col-img" src="..\img\Chiventure\logo.png">
+            <img class="col-img" src="..\img\Chiventure\Logo.png">
           </div>
           <div class="column">
             <img class="col-img" src="..\img\Chiventure\map-view.jpg">
@@ -241,7 +241,7 @@
     <div class="w-100">
       <h2 class="mb-5">Bagel</h2>
       <p>Bagel is a word-scramble game that I’m currently working on. More information soon.</p>
-      <img class="banner-img" src="..\img\Bagel\bagel_banner.png">
+      <img class="banner-img" src="..\img\Bagel\Bagel_banner.png">
     </div>
   </section>
 
