Added MADD Experience.

--- a/index.html
+++ b/index.html
@@ -171,19 +171,37 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Yuval Shaked Lab at the Technion-Israel Institute of Technology - Haifa, IL</h3>
-            <div class="subheading mb-3">Website Designer and Developer</div>
+            <h3 class="mb-0">Media, Arts, Data and Design Center at the University of Chicago - Chicago, IL</h3>
+            <div class="subheading mb-3">Hack Arts Lab Engineer</div>
             <ul class="fa-ul mb-0" style="list-style-type:disc;">
               <li>
-                Designed and constructed a website for the Cell Biology and Cancer Science Department's Research Lab.
+                Supervise use of the Hack Arts Lab’s fabrication machinery, including laser cutters, CNC machines, and 3-D Printers
               </li>
               <li>
-                Manage the website and perform occaisional updates.
+                Oversee organizational projects and manage lab resources
               </li>
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2018 - August 2018</span>
+            <span class="text-primary">October 2019 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Yuval Shaked Lab at the Technion-Israel Institute of Technology - Haifa, IL</h3>
+            <div class="subheading mb-3">Website Designer and Developer</div>
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
+              <li>
+                Designed and constructed a website for the Cell Biology and Cancer Science Department's Research Lab
+              </li>
+              <li>
+                Manage the website and perform occaisional updates
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2018 - June 2019</span>
           </div>
         </div>
 
@@ -398,6 +416,10 @@
             <i class="fa-li fa fa-check"></i> Typed Racket</li>
           <li>
             <i class="fa-li fa fa-check"></i> Photography &amp; Videography</li>
+          <li>
+            <i class="fa-li fa fa-check"></i> Laser Cutting </li>
+          <li>
+            <i class="fa-li fa fa-check"></i> 3-D Printing </li>
           <li>
             <i class="fa-li fa fa-check"></i> Juggling
           </li>
