Updated Header and Made body text color darker for better visibility.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="subheading mb-5">
           <a href="mailto:sshatzkin@uchicago.edu">sshatzkin@uchicago.edu</a>
         </div>
-        <p class="lead mb-5">A computer science student at the University of Chicago with a minor in biology. I’m interested in exploring the intersection between technology and biology in new and interesting ways.</p>
+        <p class="lead mb-5">A computer science student at The University of Chicago with a minor in biology. I’m interested in exploring the intersections between technology, entertainment, education and research in new and interesting ways.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/samshatzkin/">
             <i class="fab fa-linkedin-in"></i>
@@ -89,6 +89,10 @@
             <i class="fab fa-facebook-f"></i>
           </a>-->
         </div>
+        <br>
+        <h3>
+          Scroll down for Portfolio
+        </h3>
       </div>
     </section>
 
