Added Activities tab.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#activities">Activities</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
@@ -327,6 +330,48 @@
           </div>
         </div>
 
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Young People’s Summer Stock Performing & Creative Arts Camp - Baltimore, MD</h3>
+            <div class="subheading mb-3">Camp Photographer, Photography and Videography Teacher, Camp Counselor</div>
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
+              <li>
+                Responsible for all camp photography. Created a curriculum for and taught a beginner level photography class for 25 campers of various ages
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Summer 2014,'15,'16,'17</span>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="activities">
+      <div class="w-100">
+        <h2 class="mb-5">Activities</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">University of Chicago Engineering Society - Chicago, IL</h3>
+            <div class="subheading mb-3">Vice President, Treasurer</div>
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
+              <li>
+                Coordinate and Oversee Long – Term Engineering Projects, Guest Speakers, and Educational Workshops
+              </li>
+              <li>
+                Manage Society Budget and recruit sponsors
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2018 - Present</span>
+          </div>
+        </div>
+
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">B’nai B’rith Youth Organization - New York, NY</h3>
@@ -345,20 +390,6 @@
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Young People’s Summer Stock Performing & Creative Arts Camp, Baltimore, MD</h3>
-            <div class="subheading mb-3">Camp Photographer, Photography and Videography Teacher, Camp Counselor</div>
-            <ul class="fa-ul mb-0" style="list-style-type:disc;">
-              <li>
-                Responsible for all camp photography. Created a curriculum for and taught a beginner level photography class for 25 campers of various ages
-              </li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">Summer 2014,'15,'16,'17</span>
-          </div>
-        </div>
       </div>
     </section>
 
